cif/org.eclipse.escet.cif.tests/tests/checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif.check.err
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 22, column 7: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 26, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 34, column 11: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 38, column 17: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 42, column 16: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 67, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 69, column 11: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 70, column 17: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 71, column 16: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 77, column 19: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 79, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 80, column 21: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 81, column 20: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 85, column 3: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 87, column 3: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 88, column 3: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckAllowNeverBlocking.cif": Semantic warning at line 89, column 3: Duplicate state invariant.
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ---------------------------
  (1/1) An invariant is used.
  ---------------------------
   * In location "different_locs.loc2":
     - invariant true disables e;
       ^
   * In location "different_locs.loc5":
     - supervisor invariant e needs false;
                  ^
   * In automaton "named_invs":
     - invariant I2: true disables e;
                 ^
   * In automaton "nameless_loc":
     - invariant true disables e;
       ^
   * In group "state_invs":
     - invariant false;
       ^
